# dqsegdb2

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .rpmlint.toml  .travis.yml  README.md  README.rst  azure-pipelines.yml  dqsegdb2.spec  pyproject.toml  python-dqsegdb2.spec  requirements-doc.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.azure-pipelines/: build.yml  conda.yml  docs.yml  lint.yml  test.yml
.circleci/: config.yml
.github/workflows/: build.yml  dist.yml  docs.yml  lint.yml
.gitlab/ci/: analysis.yml  debian.yml  python.yml  rhel.yml  test.yml
debian/: changelog  control  copyright
docs/: api.rst  auth.rst  conf.py  http.rst  index.rst  query.rst
dqsegdb2/: __init__.py  __main__.py  api.py  cli.py  http.py  query.py  request.py  requests.py  utils.py
dqsegdb2/tests/: conftest.py  test_api.py  test_cli.py  test_http.py  test_query.py
rpm/: python-dqsegdb2.spec
