# -- build

[metadata]
name = dqsegdb2
license = GPL-3.0-or-later
license_files = LICENSE
author = Duncan Macleod
author_email = 'duncan.macleod@ligo.org
url = 'https://github.com/duncanmmacleod/dqsegdb2
description = 'Simplified python interface to DQSEGDB
long_description = file: README.rst
long_description_content_type = text/markdown
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools >=30.3.0
install_requires =
	gwdatafind
	ligo-segments
tests_require =
	pytest
	pytest-cov

# -- extras

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
	dqsegdb2/_version.py
per-file-ignores =
	__init__.py:F401
